ADOP-2852 Remove unused dependencies (#1081)
* Tidy build.gradle

* Update dependency syntax to remove gradle nag

* Split test utils

* Remove PMD

* Remove apache imports

* Optimise imports

* Disable yarn audit for dependency check

* Disable yarn audit for dependency check

* Bump gradle

* Fix gradle nag

* Bump axios to fix smoke tests

* Remove unused dependencies

* Remove unused dependencies and fix deprecation nags

* Add validator

* Fix consumer Pact test wiring and V4 migration

* Clean suppressions

* Bump hmcts plugin

* Update suppressions

* Use single quotes

* Refactor multi-child submit alert grouping

* Align multi-child submit alert test with email grouping

* Use getFirst() instead of get(0)

* Fix sonar nags in tests

* Update suppressions

* Update suppressions

* Update suppressions

* ADOP-2852 revert refactored logic as will be implemented with ADOP-2857 instead

* ADOP-2852 remove unused imports

* ADOP-2852 remove unnecessary tag left after  merge conflict

* ADOP-2852 move suppression to cover log4j-core + api

* ADOP-2852 minor update elasticsearch to 9.4.3

* ADOP-2852 add null check (temporary replacement of CollectionUtils)

* ADOP-2852 revert test logic

* ADOP-2852 remove unused import

---------

Co-authored-by: hfilmore <hannah.filmore@justice.gov.uk>
Co-authored-by: hfilmore <156826086+hfilmore@users.noreply.github.com>